[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_CUTWELL"
version = "0.0.1"
authors = [
  { name="Zachary Smith", email="zachsmith.dev@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Cutwell/example_package_CUTWELL"
"Bug Tracker" = "https://github.com/Cutwell/example_package_CUTWELL/issues"